--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-body, #root, .App {
+body, html, #root, .App {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   touch-action: manipulation;
 }
